--- a/css/main.css
+++ b/css/main.css
@@ -177,7 +177,7 @@ iframe {
 
 .wrap-login100 {
   width: 960px;
-  background: #fff;
+  background: rgb(32, 31, 31);
   border-radius: 10px;
   overflow: hidden;
 
@@ -211,7 +211,7 @@ iframe {
 .login100-form-title {
   font-family: Poppins-Bold;
   font-size: 24px;
-  color: #333333;
+  color: #f5f5f5;
   line-height: 1.2;
   text-align: center;
 
