--- a/public/css/classroom.css
+++ b/public/css/classroom.css
@@ -2,6 +2,7 @@
 .topnav {
     background-color: #333;
     overflow: hidden;
+    text-align: center;
   }
   
   /* Style the links inside the navigation bar */
@@ -12,16 +13,17 @@
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
+    border-radius: 6px;
   }
   
   /* Change the color of links on hover */
   .topnav a:hover {
-    background-color: #0060df;
-    color: black;
+    background-color: #ffff;
+    color:#333;
   }
   
   /* Add a color to the active/current link */
   .topnav a.active {
-    background-color: #003eaa;
-    color: white;
+    background-color: #00aa1c;
+    color: rgb(0, 0, 0);
   }
