updated some front-end
Front-End updated, but mainly isn't done

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -387,7 +387,8 @@ iframe {
     }
 
     #sidebar nav a:hover {
-      color: rgba(255, 255, 255, 0.55);
+      border-width: 5px;
+      border-color: blue;
     }
 
     #sidebar nav a.active {
@@ -750,7 +751,9 @@ iframe {
   background: #333333;
 }
 
-
+.submit-button {
+  background-color: rgb(5, 32, 32);
+}
 
 /*------------------------------------------------------------------
 [ Responsive ]*/
