--- a/public/css/classroom.css
+++ b/public/css/classroom.css
@@ -1,4 +1,5 @@
 /* Add a black background color to the top navigation */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;600&display=swap');
 .topnav {
     background-color: #333;
     overflow: hidden;
@@ -35,6 +36,8 @@
   border-radius: 20px;
   margin-top: 70px;
   text-align: center;
+  font-family: Montserrat;
+  font-size: large;
 }
   .class-body {
     margin: auto;
@@ -44,11 +47,12 @@
   .submit-button {
     margin:auto; 
     width: 10%; 
-    background-color: rgb(197, 25, 197); 
+    background-image: linear-gradient(rgba(110, 23, 23, 0.507), rgb(68, 0, 255));
     border-radius: 5px; 
     margin-top: 20px;
     height: 60px; 
     display: none; 
     padding:0px;
     text-align: auto;
+    font-family: Montserrat;
   }
