--- a/public/css/classroom.css
+++ b/public/css/classroom.css
@@ -38,6 +38,7 @@
   text-align: center;
   font-family: Montserrat;
   font-size: large;
+  margin-bottom: 5px;
 }
   .class-body {
     margin: auto;
@@ -56,3 +57,17 @@
     text-align: auto;
     font-family: Montserrat;
   }
+   .reply-text {
+    background-color: rgba(47, 17, 56, 0.966);
+    text-align: center;
+    margin-bottom: 40px;
+    margin-top: 10px;
+    border-radius: 15px;
+    color: white;
+  }
+    .reply-text a {
+    color: yellow;
+  }
+    ::placeholder {
+      color: white;
+    }
