--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -1,4 +1,6 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,500,700);@charset "UTF-8";
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,500,700);
+@charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda&display=swap');
 /*------------------------------------------------------------------
 [Master Stylesheet]
 
@@ -123,7 +125,7 @@ html {
 
 [dir=ltr] body {
   margin: 0;
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: "Bodoni Moda", sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
