--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -1,6 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,500,700);
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&family=Zen+Tokyo+Zoo&display=swap');
 /*------------------------------------------------------------------
 [Master Stylesheet]
 
@@ -125,7 +126,7 @@ html {
 
 [dir=ltr] body {
   margin: 0;
-  font-family: "Bodoni Moda", sans-serif;
+  font-family: "Nunito", sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
